avoid bottom border on IE8 where the complex nth-child CSS selector must not work
git-svn-id: http://httparchive.googlecode.com/svn/trunk@325 fc7d47d3-c008-acd5-f51f-d19787b8a02f

--- a/style.css
+++ b/style.css
@@ -199,6 +199,8 @@ p + ul, p + ol {
 .even-columns li {
 	list-style: none; }
 
+#interestingcontainer TD { 
+	border-bottom: 0px; }
 #interesting { 
 	width: 660px; 
 	text-align: center; }
